# pocket-projects

./: README.md
rag-eval-lab/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
rag-eval-lab/app/config/: __init__.py  experiment.yaml  settings.py
rag-eval-lab/app/generation/: __init__.py  multi_turn.py  single_turn.py
rag-eval-lab/app/generation/prompts/: multi_turn.yaml  single_turn.yaml
rag-eval-lab/app/ingestion/: __init__.py  loader.py  loader2.py  loader_helper.py
rag-eval-lab/app/ingestion/chunking/: __init__.py  base.py  factory.py  fixed.py  recursive.py  semantic.py  sentence.py
rag-eval-lab/app/ingestion/indexing/: dense.py  sparse.py
rag-eval-lab/app/pipeline/: __init__.py  base.py  multi_turn.py  single_turn.py
rag-eval-lab/app/retrieval/: __init__.py  base.py  dense.py  hybrid.py  sparse.py  utils.py
rag-eval-lab/app/retrieval/reranker/: base.py  cohere.py  cross_encoder.py  factory.py
rag-eval-lab/app/tracing/: __init__.py  langfuse.py
rag-eval-lab/app/utils/: __init__.py  config_loader.py  logger.py  text.py  wiki_api_fetcher.py
rag-eval-lab/docs/: directory_struct.md  self_hosting.md  setup_guide.md
rag-eval-lab/docs/chunking/: lessons.md  semantic.md  sementic.md
rag-eval-lab/docs/generation/: lessons.md
rag-eval-lab/docs/ingestion/: lessons.md
rag-eval-lab/docs/retrieval/: lessons.md
rag-eval-lab/tests/: test_generation.py  test_ingestion.py  test_pipeline.py
